--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node-sass": "^4.9.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.4"
+    "react-scripts": "2.0.4",
+    "react-testing-library": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
